--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
 
         <!-- NHÚNG ICON -->
-        <link rel="stylesheet" href="/assets/font/fontawesome-free-6.5.2-web/css/all.css">
+        <link rel="stylesheet" href="./assets/font/fontawesome-free-6.5.2-web/css/all.css">
 
         <style></style>
     </head>
@@ -549,7 +549,7 @@
             <div class="footer__about">
                 <p class="footer__about__text">© 2024 Tripadvisor LLC</p>
                 <p class="footer__about__text">Đây là phiên bản trang web dành cho người sử dụng Tiếng Việt tại Việt Nam. Nếu bạn ở tại quốc gia hoặc vùng lãnh thổ khác, vui lòng chọn phiên bản Tripadvisor phù hợp với quốc gia hoặc vùng lãnh thổ của mình trong menu thả xuống.</p>
-                <p class="footer__about__ending">This is Group 8's project ♡</p>
+                <p class="footer__about__ending">This is Group 8's project demo ♡</p>
             </div>
 
         </div>
